hphp/test/zend/good/ext/xmlwriter/tests/xmlwriter_write_attribute_ns_basic_001.php.skipif
<?php
<<__EntryPoint>> function main() {
if (!extension_loaded("xmlwriter")) print "skip";
}
