hphp/test/zend/bad/ext/standard/tests/general_functions/bug44394_2.php.skipif
<?php if (!extension_loaded("session")) print "skip"; ?>